com/trab1/trab.output
Terminals unused in grammar

    T_DIVIDE_INT
    T_RETURN
    T_TRUE
    T_FALSE
    T_COL_ESQ
    T_COL_DIR
    T_COMENTARIO


State 135 conflicts: 1 shift/reduce
State 147 conflicts: 1 shift/reduce
State 150 conflicts: 1 shift/reduce
State 155 conflicts: 1 shift/reduce


Grammar

    0 $accept: algoritimo $end

    1 algoritimo: %empty
    2           | var_global funcao_main outras_funcoes
    3           | var_global funcao_main
    4           | funcao_main outras_funcoes
    5           | funcao_main

    6 var_global: var_global init_vars
    7           | init_vars

    8 outras_funcoes: outras_funcoes funcao
    9               | funcao

   10 funcao: tipo_var nome_func T_PAR_ESQ argumentos T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

   11 argumentos: tipo_var valor
   12           | tipo_var valor T_VIRGULA argumentos

   13 funcao_main: tipo_var T_MAIN T_PAR_ESQ T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

   14 codigo: codigo linha
   15       | linha

   16 linha: variaveis
   17      | lacos
   18      | io
   19      | condicional

   20 condicional: ifelse
   21            | if

   22 ifelse: T_IF T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR T_ELSE T_CHA_ESQ codigo T_CHA_DIR
   23       | T_IF T_PAR_ESQ condicao T_PAR_DIR linha T_ELSE T_CHA_ESQ linha T_CHA_DIR
   24       | T_IF T_PAR_ESQ condicao T_PAR_DIR linha T_ELSE T_CHA_ESQ codigo T_CHA_DIR
   25       | T_IF T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR T_ELSE linha

   26 if: T_IF T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR
   27   | T_IF T_PAR_ESQ condicao T_PAR_DIR linha

   28 io: read
   29   | print

   30 read: T_READ nome_var T_PONTO_VIRGULA

   31 print: T_PRINT print2 T_PONTO_VIRGULA

   32 print2: print2 T_ASPAS T_TEXT T_ASPAS
   33       | print2 nome_var
   34       | T_ASPAS T_TEXT T_ASPAS
   35       | nome_var

   36 lacos: do
   37      | while
   38      | for

   39 do: T_DO T_CHA_ESQ codigo T_CHA_DIR T_WHILE T_PAR_ESQ condicao T_PAR_DIR T_PONTO_VIRGULA

   40 while: T_WHILE T_PAR_ESQ condicao T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ codigo T_CHA_DIR T_PONTO_VIRGULA
   41      | T_WHILE T_PAR_ESQ condicao T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ linha T_CHA_DIR T_PONTO_VIRGULA

   42 for: T_FOR T_PAR_ESQ nome_var T_DOIS_PONTOS valor T_VIRGULA valor T_VIRGULA valor T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ codigo T_CHA_DIR T_PONTO_VIRGULA
   43    | T_FOR T_PAR_ESQ nome_var T_DOIS_PONTOS valor T_VIRGULA valor T_VIRGULA valor T_PAR_DIR T_DOIS_PONTOS linha T_PONTO_VIRGULA

   44 condicao: condicao T_OR condicao
   45         | condicao T_AND condicao
   46         | expr_cond

   47 expr_cond: expressao op_logico expressao

   48 op_logico: T_ATRIBUICAO
   49          | T_EQUALS
   50          | T_NOTEQUALS
   51          | T_MAIOR_QUE
   52          | T_MENOR_QUE
   53          | T_MAIOR_IGUAL_QUE
   54          | T_MENOR_IGUAL_QUE

   55 variaveis: init_vars
   56          | atribuir_var

   57 atribuir_var: nome_var T_ATRIBUICAO expressao T_PONTO_VIRGULA

   58 init_vars: tipo_var nome_var T_ATRIBUICAO expressao T_PONTO_VIRGULA
   59          | tipo_var nome_var T_PONTO_VIRGULA

   60 expressao: term T_PLUS expressao
   61          | term T_MINUS expressao
   62          | term

   63 term: factor T_MULTIPLY term
   64     | factor T_DIVIDE term
   65     | factor

   66 factor: expo T_EXPOENT factor
   67       | expo

   68 expo: T_PAR_ESQ expressao T_PAR_DIR
   69     | valor
   70     | chamada_func

   71 chamada_func: nome_func T_PAR_ESQ parametros T_PAR_DIR
   72             | nome_func T_PAR_ESQ T_PAR_DIR

   73 parametros: valor
   74           | valor T_VIRGULA parametros

   75 tipo_var: T_BOOL
   76         | T_INT
   77         | T_REAL

   78 valor: valor_inteiro
   79      | valor_float

   80 valor_inteiro: T_INT

   81 valor_float: T_REAL

   82 nome_var: T_IDENT

   83 nome_func: T_IDENT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_INT <ival> (258) 76 80
    T_REAL <fval> (259) 77 81
    T_BOOL <bool> (260) 75
    T_PLUS (261) 60
    T_MINUS (262) 61
    T_MULTIPLY (263) 63
    T_DIVIDE (264) 64
    T_DIVIDE_INT (265)
    T_EXPOENT (266) 66
    T_ATRIBUICAO (267) 48 57 58
    T_EQUALS (268) 49
    T_NOTEQUALS (269) 50
    T_MENOR_QUE (270) 52
    T_MAIOR_QUE (271) 51
    T_MENOR_IGUAL_QUE (272) 54
    T_MAIOR_IGUAL_QUE (273) 53
    T_PONTO_VIRGULA (274) 30 31 39 40 41 42 43 57 58 59
    T_DOIS_PONTOS (275) 40 41 42 43
    T_VIRGULA (276) 12 42 43 74
    T_PRINT (277) 31
    T_READ (278) 30
    T_FOR (279) 42 43
    T_IF (280) 22 23 24 25 26 27
    T_ELSE (281) 22 23 24 25
    T_MAIN (282) 13
    T_WHILE (283) 39 40 41
    T_DO (284) 39
    T_RETURN (285)
    T_TRUE (286)
    T_FALSE (287)
    T_COL_ESQ (288)
    T_COL_DIR (289)
    T_CHA_ESQ (290) 10 13 22 23 24 25 26 39 40 41 42
    T_CHA_DIR (291) 10 13 22 23 24 25 26 39 40 41 42
    T_PAR_ESQ (292) 10 13 22 23 24 25 26 27 39 40 41 42 43 68 71 72
    T_PAR_DIR (293) 10 13 22 23 24 25 26 27 39 40 41 42 43 68 71 72
    T_COMENTARIO (294)
    T_IDENT (295) 82 83
    T_TEXT (296) 32 34
    T_ASPAS (297) 32 34
    T_AND (298) 45
    T_OR (299) 44


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    algoritimo (46)
        on left: 1 2 3 4 5
        on right: 0
    var_global (47)
        on left: 6 7
        on right: 2 3 6
    outras_funcoes (48)
        on left: 8 9
        on right: 2 4 8
    funcao (49)
        on left: 10
        on right: 8 9
    argumentos (50)
        on left: 11 12
        on right: 10 12
    funcao_main (51)
        on left: 13
        on right: 2 3 4 5
    codigo (52)
        on left: 14 15
        on right: 10 13 14 22 24 25 26 39 40 42
    linha (53)
        on left: 16 17 18 19
        on right: 14 15 23 24 25 27 41 43
    condicional (54)
        on left: 20 21
        on right: 19
    ifelse (55)
        on left: 22 23 24 25
        on right: 20
    if (56)
        on left: 26 27
        on right: 21
    io (57)
        on left: 28 29
        on right: 18
    read (58)
        on left: 30
        on right: 28
    print (59)
        on left: 31
        on right: 29
    print2 (60)
        on left: 32 33 34 35
        on right: 31 32 33
    lacos (61)
        on left: 36 37 38
        on right: 17
    do (62)
        on left: 39
        on right: 36
    while (63)
        on left: 40 41
        on right: 37
    for (64)
        on left: 42 43
        on right: 38
    condicao (65)
        on left: 44 45 46
        on right: 22 23 24 25 26 27 39 40 41 44 45
    expr_cond (66)
        on left: 47
        on right: 46
    op_logico (67)
        on left: 48 49 50 51 52 53 54
        on right: 47
    variaveis (68)
        on left: 55 56
        on right: 16
    atribuir_var (69)
        on left: 57
        on right: 56
    init_vars (70)
        on left: 58 59
        on right: 6 7 55
    expressao (71)
        on left: 60 61 62
        on right: 47 57 58 60 61 68
    term (72)
        on left: 63 64 65
        on right: 60 61 62 63 64
    factor (73)
        on left: 66 67
        on right: 63 64 65 66
    expo (74)
        on left: 68 69 70
        on right: 66 67
    chamada_func (75)
        on left: 71 72
        on right: 70
    parametros (76)
        on left: 73 74
        on right: 71 74
    tipo_var (77)
        on left: 75 76 77
        on right: 10 11 12 13 58 59
    valor (78)
        on left: 78 79
        on right: 11 12 42 43 69 73 74
    valor_inteiro (79)
        on left: 80
        on right: 78
    valor_float (80)
        on left: 81
        on right: 79
    nome_var (81)
        on left: 82
        on right: 30 33 35 42 43 57 58 59
    nome_func (82)
        on left: 83
        on right: 10 71 72


State 0

    0 $accept: . algoritimo $end

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    $default  reduce using rule 1 (algoritimo)

    algoritimo   go to state 4
    var_global   go to state 5
    funcao_main  go to state 6
    init_vars    go to state 7
    tipo_var     go to state 8


State 1

   76 tipo_var: T_INT .

    $default  reduce using rule 76 (tipo_var)


State 2

   77 tipo_var: T_REAL .

    $default  reduce using rule 77 (tipo_var)


State 3

   75 tipo_var: T_BOOL .

    $default  reduce using rule 75 (tipo_var)


State 4

    0 $accept: algoritimo . $end

    $end  shift, and go to state 9


State 5

    2 algoritimo: var_global . funcao_main outras_funcoes
    3           | var_global . funcao_main
    6 var_global: var_global . init_vars

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    funcao_main  go to state 10
    init_vars    go to state 11
    tipo_var     go to state 8


State 6

    4 algoritimo: funcao_main . outras_funcoes
    5           | funcao_main .

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    $default  reduce using rule 5 (algoritimo)

    outras_funcoes  go to state 12
    funcao          go to state 13
    tipo_var        go to state 14


State 7

    7 var_global: init_vars .

    $default  reduce using rule 7 (var_global)


State 8

   13 funcao_main: tipo_var . T_MAIN T_PAR_ESQ T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR
   58 init_vars: tipo_var . nome_var T_ATRIBUICAO expressao T_PONTO_VIRGULA
   59          | tipo_var . nome_var T_PONTO_VIRGULA

    T_MAIN   shift, and go to state 15
    T_IDENT  shift, and go to state 16

    nome_var  go to state 17


State 9

    0 $accept: algoritimo $end .

    $default  accept


State 10

    2 algoritimo: var_global funcao_main . outras_funcoes
    3           | var_global funcao_main .

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    $default  reduce using rule 3 (algoritimo)

    outras_funcoes  go to state 18
    funcao          go to state 13
    tipo_var        go to state 14


State 11

    6 var_global: var_global init_vars .

    $default  reduce using rule 6 (var_global)


State 12

    4 algoritimo: funcao_main outras_funcoes .
    8 outras_funcoes: outras_funcoes . funcao

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    $default  reduce using rule 4 (algoritimo)

    funcao    go to state 19
    tipo_var  go to state 14


State 13

    9 outras_funcoes: funcao .

    $default  reduce using rule 9 (outras_funcoes)


State 14

   10 funcao: tipo_var . nome_func T_PAR_ESQ argumentos T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_IDENT  shift, and go to state 20

    nome_func  go to state 21


State 15

   13 funcao_main: tipo_var T_MAIN . T_PAR_ESQ T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_PAR_ESQ  shift, and go to state 22


State 16

   82 nome_var: T_IDENT .

    $default  reduce using rule 82 (nome_var)


State 17

   58 init_vars: tipo_var nome_var . T_ATRIBUICAO expressao T_PONTO_VIRGULA
   59          | tipo_var nome_var . T_PONTO_VIRGULA

    T_ATRIBUICAO     shift, and go to state 23
    T_PONTO_VIRGULA  shift, and go to state 24


State 18

    2 algoritimo: var_global funcao_main outras_funcoes .
    8 outras_funcoes: outras_funcoes . funcao

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    $default  reduce using rule 2 (algoritimo)

    funcao    go to state 19
    tipo_var  go to state 14


State 19

    8 outras_funcoes: outras_funcoes funcao .

    $default  reduce using rule 8 (outras_funcoes)


State 20

   83 nome_func: T_IDENT .

    $default  reduce using rule 83 (nome_func)


State 21

   10 funcao: tipo_var nome_func . T_PAR_ESQ argumentos T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_PAR_ESQ  shift, and go to state 25


State 22

   13 funcao_main: tipo_var T_MAIN T_PAR_ESQ . T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_PAR_DIR  shift, and go to state 26


State 23

   58 init_vars: tipo_var nome_var T_ATRIBUICAO . expressao T_PONTO_VIRGULA

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    expressao      go to state 30
    term           go to state 31
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 24

   59 init_vars: tipo_var nome_var T_PONTO_VIRGULA .

    $default  reduce using rule 59 (init_vars)


State 25

   10 funcao: tipo_var nome_func T_PAR_ESQ . argumentos T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_INT   shift, and go to state 1
    T_REAL  shift, and go to state 2
    T_BOOL  shift, and go to state 3

    argumentos  go to state 39
    tipo_var    go to state 40


State 26

   13 funcao_main: tipo_var T_MAIN T_PAR_ESQ T_PAR_DIR . T_CHA_ESQ codigo T_CHA_DIR

    T_CHA_ESQ  shift, and go to state 41


State 27

   80 valor_inteiro: T_INT .

    $default  reduce using rule 80 (valor_inteiro)


State 28

   81 valor_float: T_REAL .

    $default  reduce using rule 81 (valor_float)


State 29

   68 expo: T_PAR_ESQ . expressao T_PAR_DIR

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    expressao      go to state 42
    term           go to state 31
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 30

   58 init_vars: tipo_var nome_var T_ATRIBUICAO expressao . T_PONTO_VIRGULA

    T_PONTO_VIRGULA  shift, and go to state 43


State 31

   60 expressao: term . T_PLUS expressao
   61          | term . T_MINUS expressao
   62          | term .

    T_PLUS   shift, and go to state 44
    T_MINUS  shift, and go to state 45

    $default  reduce using rule 62 (expressao)


State 32

   63 term: factor . T_MULTIPLY term
   64     | factor . T_DIVIDE term
   65     | factor .

    T_MULTIPLY  shift, and go to state 46
    T_DIVIDE    shift, and go to state 47

    $default  reduce using rule 65 (term)


State 33

   66 factor: expo . T_EXPOENT factor
   67       | expo .

    T_EXPOENT  shift, and go to state 48

    $default  reduce using rule 67 (factor)


State 34

   70 expo: chamada_func .

    $default  reduce using rule 70 (expo)


State 35

   69 expo: valor .

    $default  reduce using rule 69 (expo)


State 36

   78 valor: valor_inteiro .

    $default  reduce using rule 78 (valor)


State 37

   79 valor: valor_float .

    $default  reduce using rule 79 (valor)


State 38

   71 chamada_func: nome_func . T_PAR_ESQ parametros T_PAR_DIR
   72             | nome_func . T_PAR_ESQ T_PAR_DIR

    T_PAR_ESQ  shift, and go to state 49


State 39

   10 funcao: tipo_var nome_func T_PAR_ESQ argumentos . T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR

    T_PAR_DIR  shift, and go to state 50


State 40

   11 argumentos: tipo_var . valor
   12           | tipo_var . valor T_VIRGULA argumentos

    T_INT   shift, and go to state 27
    T_REAL  shift, and go to state 28

    valor          go to state 51
    valor_inteiro  go to state 36
    valor_float    go to state 37


State 41

   13 funcao_main: tipo_var T_MAIN T_PAR_ESQ T_PAR_DIR T_CHA_ESQ . codigo T_CHA_DIR

    T_INT    shift, and go to state 1
    T_REAL   shift, and go to state 2
    T_BOOL   shift, and go to state 3
    T_PRINT  shift, and go to state 52
    T_READ   shift, and go to state 53
    T_FOR    shift, and go to state 54
    T_IF     shift, and go to state 55
    T_WHILE  shift, and go to state 56
    T_DO     shift, and go to state 57
    T_IDENT  shift, and go to state 16

    codigo        go to state 58
    linha         go to state 59
    condicional   go to state 60
    ifelse        go to state 61
    if            go to state 62
    io            go to state 63
    read          go to state 64
    print         go to state 65
    lacos         go to state 66
    do            go to state 67
    while         go to state 68
    for           go to state 69
    variaveis     go to state 70
    atribuir_var  go to state 71
    init_vars     go to state 72
    tipo_var      go to state 73
    nome_var      go to state 74


State 42

   68 expo: T_PAR_ESQ expressao . T_PAR_DIR

    T_PAR_DIR  shift, and go to state 75


State 43

   58 init_vars: tipo_var nome_var T_ATRIBUICAO expressao T_PONTO_VIRGULA .

    $default  reduce using rule 58 (init_vars)


State 44

   60 expressao: term T_PLUS . expressao

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    expressao      go to state 76
    term           go to state 31
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 45

   61 expressao: term T_MINUS . expressao

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    expressao      go to state 77
    term           go to state 31
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 46

   63 term: factor T_MULTIPLY . term

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    term           go to state 78
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 47

   64 term: factor T_DIVIDE . term

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    term           go to state 79
    factor         go to state 32
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 48

   66 factor: expo T_EXPOENT . factor

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_ESQ  shift, and go to state 29
    T_IDENT    shift, and go to state 20

    factor         go to state 80
    expo           go to state 33
    chamada_func   go to state 34
    valor          go to state 35
    valor_inteiro  go to state 36
    valor_float    go to state 37
    nome_func      go to state 38


State 49

   71 chamada_func: nome_func T_PAR_ESQ . parametros T_PAR_DIR
   72             | nome_func T_PAR_ESQ . T_PAR_DIR

    T_INT      shift, and go to state 27
    T_REAL     shift, and go to state 28
    T_PAR_DIR  shift, and go to state 81

    parametros     go to state 82
    valor          go to state 83
    valor_inteiro  go to state 36
    valor_float    go to state 37


State 50

   10 funcao: tipo_var nome_func T_PAR_ESQ argumentos T_PAR_DIR . T_CHA_ESQ codigo T_CHA_DIR

    T_CHA_ESQ  shift, and go to state 84


State 51

   11 argumentos: tipo_var valor .
   12           | tipo_var valor . T_VIRGULA argumentos

    T_VIRGULA  shift, and go to state 85

    $default  reduce using rule 11 (argumentos)


State 52

   31 print: T_PRINT . print2 T_PONTO_VIRGULA

    T_IDENT  shift, and go to state 16
    T_ASPAS  shift, and go to state 86

    print2    go to state 87
    nome_var  go to state 88


State 53

   30 read: T_READ . nome_var T_PONTO_VIRGULA

    T_IDENT  shift, and go to state 16

    nome_var  go to state 89


State 54

   42 for: T_FOR . T_PAR_ESQ nome_var T_DOIS_PONTOS valor T_VIRGULA valor T_VIRGULA valor T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ codigo T_CHA_DIR T_PONTO_VIRGULA
   43    | T_FOR . T_PAR_ESQ nome_var T_DOIS_PONTOS valor T_VIRGULA valor T_VIRGULA valor T_PAR_DIR T_DOIS_PONTOS linha T_PONTO_VIRGULA

    T_PAR_ESQ  shift, and go to state 90


State 55

   22 ifelse: T_IF . T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR T_ELSE T_CHA_ESQ codigo T_CHA_DIR
   23       | T_IF . T_PAR_ESQ condicao T_PAR_DIR linha T_ELSE T_CHA_ESQ linha T_CHA_DIR
   24       | T_IF . T_PAR_ESQ condicao T_PAR_DIR linha T_ELSE T_CHA_ESQ codigo T_CHA_DIR
   25       | T_IF . T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR T_ELSE linha
   26 if: T_IF . T_PAR_ESQ condicao T_PAR_DIR T_CHA_ESQ codigo T_CHA_DIR
   27   | T_IF . T_PAR_ESQ condicao T_PAR_DIR linha

    T_PAR_ESQ  shift, and go to state 91


State 56

   40 while: T_WHILE . T_PAR_ESQ condicao T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ codigo T_CHA_DIR T_PONTO_VIRGULA
   41      | T_WHILE . T_PAR_ESQ condicao T_PAR_DIR T_DOIS_PONTOS T_CHA_ESQ linha T_CHA_DIR T_PONTO_VIRGULA

    T_PAR_ESQ  shift, and go to state 92


State 57

   39 do: T_DO . T_CHA_ESQ codigo T_CHA_DIR T_WHILE T_PAR_ESQ condicao T_PAR_DIR T_PONTO_VIRGULA

    T_CHA_ESQ  shift, and go to state 93


State 58

   13 funcao_main: tipo_var T_MAIN T_PAR_ESQ T_PAR_DIR T_CHA_ESQ codigo . T_CHA_DIR
   14 codigo: codigo . linha

    T_INT      shift, and go to state 1
    T_REAL     shift, and go to state 2
    T_BOOL     shift, and go to state 3
    T_PRINT    shift, and go to state 52
    T_READ     shift, and go to state 53
    T_FOR      shift, and go to state 54
    T_IF       shift, and go to state 55
    T_WHILE    shift, and go to state 56
    T_DO       shift, and go to state 57
    T_CHA_DIR  shift, and go to state 94
    T_IDENT    shift, and go to state 16

    linha         go to state 95
    condicional   go to state 60
    ifelse        go to state 61
    if            go to state 62
    io            go to state 63
    read          go to state 64
    print         go to state 65
    lacos         go to state 66
    do            go to state 67
    while         go to state 68
    for           go to state 69
    variaveis     go to state 70
    atribuir_var  go to state 71
    init_vars     go to state 72
    tipo_var      go to state 73
    nome_var      go to state 74


State 59

   15 codigo: linha .

    $default  reduce using rule 15 (codigo)


State 60

   19 linha: condicional .

    $default  reduce using rule 19 (linha)


State 61

   20 condicional: ifelse .

    $default  reduce using rule 20 (condicional)


State 62

   21 condicional: if .

    $default  reduce using rule 21 (condicional)


State 63

   18 linha: io .

    $default  reduce using rule 18 (linha)


State 64

   28 io: read .

    $default  reduce using rule 28 (io)


State 65

   29 io: print .

    $default  reduce using rule 29 (io)


State 66

   17 linha: lacos .

    $default  reduce using rule 17 (linha)


State 67

   36 lacos: do .

    $default  reduce using rule 36 (lacos)


State 68
